@@ -4,7 +4,6 @@ import static org.junit.Assert.assertEquals;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.Test;
 
@@ -47,7 +46,7 @@ public class FixedOrderSchedulerImplTest {
 
 	private static List<String> getControllerIds(Scheduler scheduler) throws OpenemsNamedException {
 		return scheduler.getControllers().stream() //
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 }
